# sha204

./: .gitignore  CMakeLists.txt  atsha204_DevRev_cmd.h  atsha204_actions.c  atsha204_actions.h  atsha204_ctc_d1_solutions.c  atsha204_ctc_d1_solutions.h  atsha204_i2c.c  atsha204_i2c.h  atsha204_personalization.h  encrypted_read.c  encrypted_write.c  main.cpp  random_challenge_response_authentication.h  sha204_comm.c  sha204_comm.h  sha204_helper.h  utils.cmake
sha204/: atsha204_DevRev_cmd.c  atsha204_DevRev_cmd.h  atsha204_actions.c  atsha204_actions.h  atsha204_i2c.c  atsha204_i2c.h  encrypted_read.c  encrypted_write.c  random_challenge_response_authentication.c  random_challenge_response_authentication.h  sha204_comm.c  sha204_comm.h  sha204_comm_marshaling.c  sha204_comm_marshaling.h  sha204_helper.c  sha204_helper.h
